Attach all the files in index.html

--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr.Abhinav</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./images/favicon/favicon.jpeg" type="image/x-icon">
+    <!-- Style Sheets -->
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/queries.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Font Awesome Icons  -->
+    <script src="https://kit.fontawesome.com/4dfe5fcdbd.js" crossorigin="anonymous"></script>
+    <!-- Script -->
 </head>
 
 <body>
-
+    <!-- Navigation Bar -->
+    <!-- Header -->
+    <!-- Content1  -->
+    <!-- Content2  -->
+    <!-- Content3  -->
+    <!-- Content4  -->
+    <!-- Footer -->
+    <!-- Copyright -->
+    <!-- Script -->
 </body>
 
 </html>
