Added comments for Sections

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 <body>
     <!-- Navigation Bar -->
     <!-- Header -->
-    <!-- Content1  -->
-    <!-- Content2  -->
-    <!-- Content3  -->
-    <!-- Content4  -->
+    <!-- About -->
+    <!-- Hobbies  -->
+    <!-- Projects  -->
+    <!-- Social  -->
     <!-- Footer -->
     <!-- Copyright -->
     <!-- Script -->
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
