--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 
 <body>
     <!-- Navigation Bar -->
+    <nav>
+        <div class="logo"><a href="#home">Mr.Abhinav</a></div>
+        <ul id="mainMenu">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#hobbies">Hobbies</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#social">Social</a></li>
+        </ul>
+    </nav>
     <!-- Header -->
     <!-- About -->
     <!-- Hobbies  -->
