--- a/index.html
+++ b/index.html
@@ -16,21 +16,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Font Awesome Icons  -->
     <script src="https://kit.fontawesome.com/4dfe5fcdbd.js" crossorigin="anonymous"></script>
-    <!-- Script -->
 </head>
 
 <body>
+    <h1>Due to some improvements Website is under Construction</h1>
     <!-- Navigation Bar -->
-    <nav>
-        <div class="logo"><a href="#home">Mr.Abhinav</a></div>
-        <ul id="mainMenu">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#hobbies">Hobbies</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#social">Social</a></li>
-        </ul>
-    </nav>
     <!-- Header -->
     <!-- About -->
     <!-- Hobbies  -->
